Fixed overflow issues on mobile view

--- a/assets/css/reset-password.css
+++ b/assets/css/reset-password.css
@@ -1,5 +1,9 @@
 @import url(./main.css);
 
+* {
+  overflow: hidden;
+}
+
 body {
   height: 100vh;
   height: 100svh;
